--- a/index.html
+++ b/index.html
@@ -248,17 +248,45 @@
                             <a href="week8/assignment.html">assignment</a>
                         </h4>
                     </section>
+                </section>
 
+                <section>
+                    <h3>Week 9: No class (break)</h3>
+                </section>
+
+                <section>
+                    <h3>Week 10: GitHub</h3>
+                    <section class="slides">
+                        <h4>
+                            <a href="week10">slides</a>
+                        </h4>
+                    </section>
+                    <section class="videos">
+                        <h4>videos</h4>
+                        <ul>
+                            <li><a href="https://www.youtube.com/watch?v=xxLPFpkcKLY">Export a Glitch site to GitHub Pages</a></li>
+                        </ul>
+                    </section>
+                    <section class="assignment">
+                        <h4>
+                            <a href="week10/assignment.html">assignment</a>
+                        </h4>
+                    </section>
                 </section>
 
                 <!--
-                <section></section>
-
                 <section>
-                    <h3>Week 10: Guest Speaker / Lab</h3>
-                    <p>No materials</p>
-                            <li><a href="https://www.youtube.com/watch?v=cZo0LkKwgi4">GitHub Pages through the web interface</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=Fc4wkJg8Zrs">GitHub Pages folders</a></li>
+                    <h3>Week 11</h3>
+                    <section class="slides">
+                        <h4>
+                            <a href="week11">slides</a>
+                        </h4>
+                    </section>
+                    <section class="in-class">
+                        <h4>
+                            <a href="week11/inclass.html">in-class exercises</a>
+                        </h4>
+                    </section>
                 </section>
 
                 <section>
