--- a/week10/assignment.html
+++ b/week10/assignment.html
@@ -1,41 +1,44 @@
 <html>
     <head>
         <title>Assignment 9 | Advanced GIS</title>
+        <link href='https://fonts.googleapis.com/css?family=Arvo|Alegreya Sans' rel='stylesheet' type='text/css'>
         <link href="../style.css" rel="stylesheet" />
     </head>
     <body>
         <main>
-            <header>
-                <a href="..">Advanced GIS</a>
-                <h1>Assignment 9: Mapbox</h1>
-            </header>
+        <header>
+            <a href="..">Advanced GIS</a>
+            <h1>Assignment 4</h1>
+        </header>
 
-            <section>
-                <h2>Make a Mapbox style</h2>
-                <ol>
-                    <li>Create a <a href="https://www.mapbox.com/">Mapbox</a> account if you do not have one.</li>
-                    <li>Starting with an existing style, customize the style.</li>
-                    <li>Upload your own data as a <strong>tileset</strong> and style it.</li>
-                    <li>Publish the style.</li>
-                    <li>Use the style in a Carto map.</li>
-                    <li>Publish your map online with Github pages.</li>
-                </ol>
-            </section>
+        <section>
+            <h2>Resources</h2>
+            <p>Video: <a class="" href="https://www.youtube.com/watch?v=xxLPFpkcKLY">exporting Glitch sites to GitHub Pages</a></p>
+            <p><a class="" href="https://www.youtube.com/watch?v=w3jLJU7DT5E">What is GitHub</a></p>
+            <h2>Work on your project</h2>
+            <p>Milestones are due April 18th--please keep working on your project and get in touch if you run into any roadblocks.</p>
+        </section>
 
-            <section>
-                <h2>Work on your final project</h2>
-                <p>When you proposed your project you included a milestone that you would be able to finish by April 19th. Work on your project and aim to meet that milestone.</p>
-            </section>
+        <section>
+            <h2>Export a Glitch site to GitHub Pages</h2>
+            <p>Export one of your Glitch sites to GitHub Pages:</p>
+            <ol>
+                <li>Create a <strong>repository</strong> on GitHub Pages,</li>
+                <li><strong>export</strong> your site to that repository,</li>
+                <li>create and merge a pull request to put your Glitch code on the master branch,</li>
+                <li>turn on GitHub Pages for your repository on the master branch,</li>
+                <li>ensure that the site is visible on GitHub Pages--the URL should start with <strong>yourusername</strong>.github.io. For example, <a href="https://brelsfoe.github.io/tiger-sharks/">https://brelsfoe.github.io/tiger-sharks/</a></li>
+            </ol>
+        </section>
 
-            <section>
-                <h2>Submitting your work</h2>
-                <p>Submit a link to your work.</p>
-                <p>Please include a short paragraph response or summary of your work. Indicate how you changed the styling and which data you uploaded.</p>
-            </section>
+        <section>
+            <h2>Submit your work</h2>
+            <p>Submit a link to your GitHub Pages site.</p>
+        </section>
 
-            <footer>
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Advanced GIS</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://ebrelsford.github.io/" property="cc:attributionName" rel="cc:attributionURL">Eric Brelsford</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-            </footer>
+        <footer>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Advanced GIS</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://ebrelsford.github.io/" property="cc:attributionName" rel="cc:attributionURL">Eric Brelsford</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+        </footer>
         </main>
     </body>
 </html>
