--- a/index.html
+++ b/index.html
@@ -229,12 +229,6 @@
                             <li><a href="https://glitch.com/edit/#!/carto-buttons">Carto.js filter with buttons</a></li>
                             <li><a href="https://glitch.com/edit/#!/carto-text-input">Carto.js filter with text input</a></li>
                             <li><a href="https://glitch.com/edit/#!/carto-dropdown">Carto.js filter with dropdown</a></li>
-                            <li>Coming soon:
-                                <ul>
-                                    <li>Carto.js filter with checkboxes</li>
-                                    <li>Carto.js put data in sidebar rather than popups</li>
-                                </ul>
-                            </li>
                         </ul>
                     </section>
                     <section class="videos">
@@ -260,6 +254,15 @@
                         <h4>
                             <a href="week10">slides</a>
                         </h4>
+                    </section>
+                    <section class="materials">
+                        <h4>materials</h4>
+                        <ul>
+                            <li><a href="https://glitch.com/edit/#!/carto-sidebar">Carto.js with feature data in sidebar</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-multiple-checkboxes">Carto.js with multiple checkboxes</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-hide-layers">Carto.js show or hide layers</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-radio-buttons">Carto.js filter with radio buttons</a></li>
+                        </ul>
                     </section>
                     <section class="videos">
                         <h4>videos</h4>
