--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
                     </section>
                 </section>
 
-                <!--
                 <section>
                     <h3>Week 11</h3>
                     <section class="slides">
@@ -290,8 +289,14 @@
                             <a href="week11/inclass.html">in-class exercises</a>
                         </h4>
                     </section>
+                    <section class="assignment">
+                        <h4>
+                            <a href="week10/assignment.html">assignment</a>
+                        </h4>
+                    </section>
                 </section>
 
+                <!--
                 <section>
                     <h3>Week 12</h3>
                     <section class="slides">
