--- a/index.html
+++ b/index.html
@@ -289,6 +289,13 @@
                             <a href="week11/inclass.html">in-class exercises</a>
                         </h4>
                     </section>
+                    <section class="materials">
+                        <h4>materials</h4>
+                        <ul>
+                            <li><a href="https://glitch.com/edit/#!/carto-location-click">Carto.js show features around a point</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-location-click2">Carto.js get count on location click</a></li>
+                        </ul>
+                    </section>
                     <section class="assignment">
                         <h4>
                             <a href="week10/assignment.html">assignment</a>
@@ -296,7 +303,6 @@
                     </section>
                 </section>
 
-                <!--
                 <section>
                     <h3>Week 12</h3>
                     <section class="slides">
@@ -309,8 +315,16 @@
                             <a href="week12/inclass.html">in-class exercises</a>
                         </h4>
                     </section>
+                    <section class="materials">
+                        <h4>materials</h4>
+                        <ul>
+                            <li><a href="https://glitch.com/edit/#!/carto-change-style">Carto.js change styles dynamically</a></li>
+                            <li><a href="https://glitch.com/edit/#!/carto-draw">Carto.js get data in drawn polygon</a></li>
+                        </ul>
+                    </section>
                 </section>
 
+                <!--
                 <section>
                     <h3>Week 13: Lab</h3>
                     <section class="slides">
