--- a/week12/inclass.html
+++ b/week12/inclass.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <title>In-class Exercise | Advanced GIS</title>
-        <link href="../style.css" rel="stylesheet" />
+        <link href='https://fonts.googleapis.com/css?family=Arvo|Alegreya Sans' rel='stylesheet' type='text/css'>
+        <link href="../css/pages.css" rel="stylesheet" type="text/css" />
+        <link href="../css/inclass.css" rel="stylesheet" />
     </head>
     <body>
         <main>
