--- a/index.html
+++ b/index.html
@@ -324,23 +324,16 @@
                     </section>
                 </section>
 
-                <!--
                 <section>
-                    <h3>Week 13: Lab</h3>
+                    <h3>Week 13</h3>
                     <section class="slides">
                         <h4>
                             <a href="week13">slides</a>
                         </h4>
                     </section>
-                    <section class="materials">
-                        <h4>materials</h4>
-                        <ul>
-                            <li><a href="http://jsbin.com/ketag/edit?html,output">Carto.js: images in popups</a></li>
-                            <li><a href="http://jsbin.com/hopubof/edit?html,output">Carto.js: put feature information in sidebar rather than popups</a></li>
-                        </ul>
-                    </section>
                 </section>
 
+                <!--
                 <section>
                     <h3>Week 14: Presentations, Part 1</h3>
                     <section class="materials">
