--- a/week13/index.html
+++ b/week13/index.html
@@ -34,6 +34,7 @@
         </div>
 
         <div class="slide" style="background-image: url(img/popup-if.png);">
+            <a href="https://glitch.com/edit/#!/zenith-gram?path=script.js:45:0" class="source">source</a>
         </div>
 
         <div class="slide">
