--- a/index.html
+++ b/index.html
@@ -333,17 +333,14 @@
                     </section>
                 </section>
 
-                <!--
                 <section>
-                    <h3>Week 14: Presentations, Part 1</h3>
-                    <section class="materials">
-                        <h4>materials</h4>
-                        <ul>
-                            <li><a href="http://jsbin.com/vebutaq/edit?html,output">Carto.js: show or hide entire layers with checkboxes</a></li>
-                        </ul>
+                    <h3>Week 14</h3>
+                    <section class="slides">
+                        <h4>
+                            <a href="week14">slides</a>
+                        </h4>
                     </section>
                 </section>
-                -->
 
             </section>
 
