Week 15 materials and videos

--- a/index.html
+++ b/index.html
@@ -342,6 +342,22 @@
                     </section>
                 </section>
 
+                <section>
+                    <h3>Week 15</h3>
+                    <section class="videos">
+                        <h4>videos</h4>
+                        <ul>
+                            <li><a href="https://www.youtube.com/watch?v=_PGdKpDviB4&feature=youtu.be">Using Carto and SQL like a field calculator</a></li>
+                        </ul>
+                    </section>
+                    <section class="materials">
+                        <h4>materials</h4>
+                        <ul>
+                            <li><a href="https://glitch.com/edit/#!/leaflet-map-geojson">Using Leaflet without Carto</a></li>
+                        </ul>
+                    </section>
+                </section>
+
             </section>
 
             <footer>
